Return errors using json error objects in the REST API
